Fixes next step buttons not aligned to center.

--- a/css/compat/themes/compat-bookshelf-407-beta-5.css
+++ b/css/compat/themes/compat-bookshelf-407-beta-5.css
@@ -19,6 +19,10 @@ body.theme-bookshelf .woocommerce ul#shipping_method .shipping-method__option in
   z-index: 1;
 }
 
+body.theme-bookshelf button.fc-step__next-step.button {
+  display: inline-block;
+}
+
 body.theme-bookshelf .select_container:after {
   display: none;
 }
